# Open_Source_Software_Project

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.agent-traces/: 2026-05-25-db-readme.md  2026-05-25-feed-article-query-content.md  2026-05-25-feed-article-repositories.md  2026-05-25-mature-storage-hardening.md  2026-05-25-storage-completeness-apis.md  2026-05-25-storage-db-skeleton.md  2026-05-25-storage-engineer-guide.md  2026-05-25-storage-integration-hardening.md  2026-05-25-storage-prepush-tests.md
.github/workflows/: desktop-macos.yml  release.yml
apps/desktop/: .gitignore  Cargo.toml  README.md  package.json  tauri.conf.json
apps/desktop/scripts/: prepare-build.mjs  prepare-macos-icons.mjs  start-ui-dev.mjs  tooling.mjs
apps/desktop/src/: main.rs
backend/: pyproject.toml  run_sidecar.py
backend/agent_summary/: .env.example  AGENT.md  INIT.md  PLAN.md  llm_client.py  router.py  service.py
backend/agent_translation/: agent.py  service.py
backend/app/: config.py  lifespan.py  main.py
backend/db/: README.md  __init__.py  connection.py  errors.py  maintenance.py  migrations.py  session.py
backend/feed_engine/: fetcher.py
backend/llm_providers/: AGENT.md  __init__.py  anthropic.py  base.py  config.py  ollama.py  openai_compatible.py  providers.example.json  registry.py  smoke.py
backend/scripts/: build_sidecar.py
backend/tests/: test_article_repo.py  test_db_migrations.py  test_feed_repo.py  test_http_contract.py  test_mature_storage.py  (+6 more)
docs/: ipc-contract.md  pr-review-agent-summary.md  storage-engineer-guide.md
(+54 files in other folders)
